# ScientificPaperAudit

./: .replit  Pasted-ImportError-background-gradient-requires-matplotlib-Traceback-File-home-runner-ScientificPape-1734448247595.txt  Pasted-arxiv-UnexpectedEmptyPageError-Page-of-results-was-unexpectedly-empty-https-export-arxiv-org-api-1734448719492.txt  README.md  main.py  pyproject.toml
.streamlit/: config.toml
styles/: custom.css
utils/: ai_analyzer.py  paper_fetcher.py  visualizations.py
