[project]
name = "repl-nix-scientificpapersentinel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "openai>=1.57.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pplx>=0.1.3",
    "streamlit>=1.41.1",
]
